# RRIVis

./: .gitattributes  .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: sync-hf-space.yml  tests.yml
antenna_layout_examples/: 1101503312_metafits.fits  README_antenna_formats.md  example_casa_format.cfg  example_mwa_metafits.txt  example_pyuvdata_format.txt  example_telescope_config.yaml  hera_5.txt
configs/: 01_parabolic_10db_taper.yaml  02_parabolic_uniform.yaml  03_parabolic_airy_pattern.yaml  04_dipole_array.yaml  05_spherical_reflector.yaml  06_parabolic_gaussian_taper.yaml  07_cosine_tapered_beam.yaml  08_mixed_antenna_types.yaml  09_shared_beam_fits.yaml  10_per_antenna_layout.yaml  11_per_antenna_config.yaml  README.md  config.yaml  config2.yaml  dev-test.yaml
data/: README_antenna_formats.md  example_antenna_layout.csv  example_telescope_config.yaml
docs/: HERA_VSIM_ANALYSIS.md  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  migration_guide.md  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/api/: backends.rst  core.rst  io.rst  jones.rst  simulator.rst
docs/user_guide/: backends.rst  beam_models.rst  configuration.rst  jones_matrices.rst  sky_models.rst
examples/: README.md  antenna_casa.cfg  antenna_mwa.txt  antenna_pyuvdata.txt  antenna_rrivis.txt
examples/notebooks/: 01_basic_usage.ipynb
examples/scripts/: simple_simulation.py
huggingface_space/: README.md  app.py  config.yaml  packages.txt  requirements.txt
huggingface_space/antenna_layouts/: example_rrivis_format.txt
notebooks/: exponential_precision_errors.ipynb  logarithm_precision_errors.ipynb  parabolic_uniform.ipynb  rayleigh_jeans_vs_planck.ipynb
notebooks/beams/: analytic_beam_plotting.ipynb
notebooks/catalogs/: gsm2008.ipynb
src/: antenna.py  beam_file.py  beams.py  fits.py  gsm_map.py  main.py  observation.py  plot.py  polarization.py  source.py  visibility.py  visibility_results.json
src/rrivis/: __about__.py  __init__.py
src/rrivis/api/: __init__.py  simulator.py
src/rrivis/backends/: __init__.py  base.py  jax_backend.py  numba_backend.py  numpy_backend.py
src/rrivis/cli/: __init__.py  main.py  migrate.py
src/rrivis/core/: __init__.py  antenna.py  baseline.py  beams.py  observation.py  polarization.py  precision.py  sky_model.py  source.py  visibility.py  visibility_healpix.py
src/rrivis/core/jones/: __init__.py  bandpass.py  base.py  baseline_errors.py  beam.py  chain.py  crosshand.py  delay.py  element_beam.py  faraday.py  gain.py  geometric.py  ionosphere.py  parallactic.py  polarization_leakage.py  receptor.py  troposphere.py  wterm.py
src/rrivis/io/: __init__.py  antenna_readers.py  config.py  fits_utils.py  measurement_set.py  readers.py  writers.py
src/rrivis/simulator/: __init__.py  base.py  rime.py
src/rrivis/utils/: __init__.py  device.py  frequency.py  logging.py  network.py  validation.py
src/rrivis/visualization/: __init__.py  bokeh_plots.py  gsm_plots.py
tests/: conftest.py  test_antenna.py  test_antenna_file_formats.py  test_antenna_formats.py  test_baseline.py  test_beam_file.py  test_main.py  test_observation.py  test_plot.py  test_polarization.py  test_visibility.py
tests/fixtures/: __init__.py  sample_antenna_layouts.py  sample_configs.py  sample_sky_models.py
tests/integration/: test_cli.py  test_end_to_end.py  test_simulator_api.py
tests/performance/: benchmark_backends.py  benchmark_large_simulations.py
tests/unit/: antenna_layout_examples
tests/unit/test_api/: test_flux_unit.py
tests/unit/test_backends/: test_backends.py  test_equivalence.py
tests/unit/test_cli/: test_main.py
tests/unit/test_core/: test_antenna.py  test_antenna_formats.py  test_baseline.py  test_beam_file.py  test_beam_projection.py  test_catalogs.py  test_new_catalogs.py  test_observation.py  test_plot.py  test_polarization.py  test_precision.py  test_sky_analysis.py  test_sky_catalogs.py  test_sky_combine.py  test_sky_constants.py  test_sky_convert.py  test_sky_fits_loader.py  test_sky_lazy.py  test_sky_model.py  test_sky_model_multifreq.py  test_sky_models.py  test_sky_pipeline.py  test_sky_plotter.py  test_sky_point_metadata.py  test_sky_region.py  test_sky_registry.py  test_sky_sparse_healpix.py  test_sky_spectral.py  test_visibility.py  test_visibility_healpix.py  test_visibility_regression.py
tests/unit/test_io/: test_antenna_file_formats.py  test_config.py  test_measurement_set.py  test_writers.py
tests/unit/test_jones/: test_beam_aperture.py  test_beam_composed.py  test_beam_feed.py  test_beam_numerical_hpbw.py  test_beam_plotting.py  test_beam_taper.py  test_jones.py
tests/unit/test_simulator/: test_api.py  test_simulator.py
tests/unit/test_utils/: test_device.py  test_diagnostics_planner.py  test_diagnostics_strip_plotter.py  test_frequency.py  test_network.py
tests/unit/test_visualization/: test_sky_visibility_bokeh_renderer.py  test_sky_visibility_planner.py
(+54 files in other folders)
